with-fixed-nav-opacity-stretch-goal

--- a/css/index.css
+++ b/css/index.css
@@ -165,8 +165,11 @@ p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #F6F6F6;
   border-bottom: #F1F1F1;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(246, 246, 246, 0.8);
 }
 @media (max-width: 500px) {
   .nav-bar {
@@ -186,7 +189,7 @@ p {
 }
 @media (max-width: 500px) {
   .nav-bar nav {
-    width: 450px;
+    width: 400px;
   }
 }
 .nav-bar nav a {
@@ -206,6 +209,7 @@ footer {
 }
 .home .intro img {
   border-radius: 5px;
+  margin-top: 130px;
 }
 @media (max-width: 500px) {
   .home .intro img {
