--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,7 @@
 
     img {
       border-radius: 5px;
+      margin-top: 130px;
 
       @media @phone {
         max-width: 483px;
